--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,14 @@
+ header {
+    width: 100%;
+    min-height: 23px;
 
+    padding-top: 20px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
 
 .container-fluid{
 
