change carousel-inner to flex

--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,13 @@
     align-items: center;
 }
 
+.carousel-inner{
+    width: auto;
+    height: 500px;
+    display: flex;
+    justify-content: inherit;
+    
+}
 .container-fluid{
 
 }
