--- a/styles/index.css
+++ b/styles/index.css
@@ -1,22 +1,54 @@
  header {
-    width: 100%;
-    min-height: 23px;
+     width: 100%;
+     min-height: 23px;
 
-    padding-top: 20px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
+     padding-top: 20px;
+     margin: 0 auto;
+     display: flex;
+     flex-direction: row;
+     justify-content: space-between;
+     align-items: center;
+ }
 
-.carousel-inner{
-    width: auto;
-    height: 500px;
-    display: flex;
+ .carousel-inner {
+    position: relative;
+     width: auto;
+     max-height: 500px;
+     display: flex;
     justify-content: inherit;
-    
-}
-.container-fluid{
 
-}
+ }
+ .carousel-item{
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bolder;
+ }
+ .carousel-item h5{
+    font-size: 64px;
+ }
+ .carousel-item p{
+    font-size: 32px;
+ }
+ 
+
+ .card-body{
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding-top: 20px;
+    
+ }
+ .container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px;
+    padding: 20px;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+ }
+ .container h2{
+    font-size: 48px;
+ }
+ .container h4{
+    font-size: 36px;
+    padding-bottom: 50px;
+ }
