--- a/styles/index.css
+++ b/styles/index.css
@@ -1,12 +1,11 @@
  header {
      width: 100%;
      min-height: 23px;
-
      padding-top: 20px;
      margin: 0 auto;
      display: flex;
      flex-direction: row;
-     justify-content: space-between;
+     justify-content:center;
      align-items: center;
  }
 
@@ -51,4 +50,9 @@
  .container h4{
     font-size: 36px;
     padding-bottom: 50px;
+ }
+ .grid{
+    display: flex;
+    justify-content: center;
+   
  }
