--- a/styles/index.css
+++ b/styles/index.css
@@ -1,14 +1,28 @@
  header {
      width: 100%;
      min-height: 23px;
-     padding-top: 20px;
      margin: 0 auto;
      display: flex;
      flex-direction: row;
      justify-content:center;
      align-items: center;
  }
+ .navbar{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    font-family:Impact, 'Arial Narrow Bold', sans-serif;
+    
+ }
+    .container-fluid{
+        max-width: 1200px;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
 
+    }
  .carousel-inner {
     position: relative;
      width: auto;
@@ -34,17 +48,18 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     padding-top: 20px;
     
+    
  }
  .container{
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin: 50px;
-    padding: 20px;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family:Impact, 'Arial Narrow Bold', sans-serif;
+    color: rgb(30, 30, 128);
  }
  .container h2{
+    padding-top: 50px;
     font-size: 48px;
  }
  .container h4{
